--- a/.env.local
+++ b/.env.local
@@ -5,3 +5,4 @@
       FIREBASE_STORAGE_BUCKET= @firebase-storage-bucket
       FIREBASE_MESSAGING_SENDER_ID= @firebase-messaging-sender-id
       FIREBASE_APP_ID= @firebase-app-id
+      NEXT_PUBLIC_FIREBASE_API_KEY=ABC
