--- a/package.json
+++ b/package.json
@@ -4,7 +4,9 @@
   "scripts": {
     "dev": "next dev",
     "build": "next build",
-    "start": "next start"
+    "start": "next start",
+    "test": "jest",
+    "init-test": "jest --init"
   },
   "dependencies": {
     "@ant-design/icons": "^4.6.2",
@@ -18,6 +20,9 @@
   },
   "license": "MIT",
   "devDependencies": {
-    "next": "^10.0.9"
+    "jest": "^26.6.3",
+    "jest-puppeteer": "^4.4.0",
+    "next": "^10.2.0",
+    "puppeteer": "^8.0.0"
   }
 }
