--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
     "dev": "next dev",
     "build": "next build",
     "start": "next start",
-    "test": "jest --runInBand",
+    "test": "jest --detectOpenHandles --runInBand",
     "init-test": "jest --init"
   },
   "dependencies": {
@@ -20,6 +20,8 @@
   },
   "license": "MIT",
   "devDependencies": {
+    "@babel/plugin-transform-modules-commonjs": "^7.14.0",
+    "cross-env": "^7.0.3",
     "jest": "^26.6.3",
     "jest-puppeteer": "^4.4.0",
     "next": "^10.2.0",
