--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
     "dev": "next dev",
     "build": "next build",
     "start": "next start",
-    "test": "jest --detectOpenHandles --runInBand",
+    "test": "cross-env NODE_ENV=test NODE_OPTIONS=--experimental-vm-modules npx jest --detectOpenHandles --detectOpenHandles --runInBand",
     "init-test": "jest --init"
   },
   "dependencies": {
@@ -20,11 +20,17 @@
   },
   "license": "MIT",
   "devDependencies": {
+    "@babel/core": "^7.14.0",
     "@babel/plugin-transform-modules-commonjs": "^7.14.0",
+    "@babel/preset-env": "^7.14.1",
+    "@types/jest": "^26.0.23",
+    "babel-jest": "^26.6.3",
     "cross-env": "^7.0.3",
     "jest": "^26.6.3",
     "jest-puppeteer": "^4.4.0",
     "next": "^10.2.0",
-    "puppeteer": "^8.0.0"
+    "puppeteer": "^8.0.0",
+    "ts-jest": "^26.5.6",
+    "typescript": "^4.2.4"
   }
 }
