--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "@babel/plugin-transform-modules-commonjs": "^7.14.0",
     "@babel/preset-env": "^7.14.1",
     "@types/jest": "^26.0.23",
+    "@types/react": "^17.0.5",
     "babel-jest": "^26.6.3",
     "cross-env": "^7.0.3",
     "jest": "^26.6.3",
